--- a/src/components/movieRow/MovieRow.css
+++ b/src/components/movieRow/MovieRow.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100&display=swap');
+
 .movieRow {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .movieRow h2 {
