--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -17,7 +17,7 @@
 }
 
 .modal-content {
-    background: #202020;
+    background: rgba(0, 0, 0, 0.7);
     padding: 20px;
     border-radius: 5px;
     width: 80%;
