--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100&display=swap');
+
+*{
+font-family: "Roboto", sans-serif;
+}
+
 /* Container */
 .container {
     background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
     border-radius: 4px;
     padding: 48px 68px;
     box-sizing: border-box;
@@ -8,6 +15,7 @@
     flex-direction: column;
     max-width: 500px;
     margin: 0 auto;
+    margin-bottom: 2rem;
 }
 
 /* Title */
@@ -25,6 +33,7 @@
 
 /* Input */
 .input {
+    color: #fff;
     line-height: 1.5;
     padding: 1.5rem 1rem 0.5rem 1rem;
     background: rgba(22, 22, 22, 0.7);
@@ -53,7 +62,15 @@
 .button-sign-in {
     background: rgba(128, 128, 128, 0.4);
     font-weight: 500;
+    color: #fff;
+    padding: 0.375rem 1rem;
+    min-height: 2.5rem;
+    border-style: solid;
+    border-width: 0.0625rem;
+    border-radius: calc(0.25rem - 0.0625rem);
+    border-color: rgba(0, 0, 0, 0);
 }
+
 
 .button-sign-in:hover {
     background-color: rgba(128, 128, 128, 0.2);
@@ -80,8 +97,10 @@
 
 /* Container Checkbox */
 .container-checkbox {
-    display: inline-block;
     margin-top: 16px;
+    display: flex;
+    align-items: center; /* Alinha verticalmente os itens ao centro */
+    cursor: pointer;
 }
 
 /* Checkbox */
@@ -90,6 +109,7 @@
     height: 1.125rem;
     width: 1.125rem;
     border-width: 0.0625rem;
+    margin-right: 8px;
     border-color: rgba(128, 128, 128, 0.7);
 }
 
@@ -102,13 +122,16 @@
     color: #fff;
     padding-left: 0.75rem;
     margin-top: 16px;
+    margin-bottom: 1rem;
 }
 
 /* Text Subscribe Now */
 .text-subscribe-now {
     color: #fff;
+    display: flex;
     text-align: start;
     margin-top: 16px;
+    gap: 0.6rem;
 }
 
 /* Span Link */
@@ -142,7 +165,7 @@
 /* App Container */
 .app-container {
     background-color: #000;
-    background: url(bg.jpg); /* Substitua por seu caminho de imagem */
+    background: url("../../assets/bg.jpg"); /* Substitua por seu caminho de imagem */
     width: 100%;
     height: 100vh;
 }
@@ -203,3 +226,27 @@
 .nav-footer-link:hover {
     color: #ff0000;
 }
+
+.header {
+    padding: 1.5rem 2rem 1.5rem 2rem;
+}
+
+.header img {
+    width: 9.25rem;
+    height: 2.5rem;
+    box-sizing: border-box;
+    height: auto;
+}
+
+@media (max-width: 601px) {
+    .app-container {
+        background-color: #000;
+        background: #000;
+        margin: 0 auto;
+        width: 100%;
+        height: 100vh;
+    }
+}
+
+
+    
