--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -17,13 +17,13 @@
 }
 
 .modal-content {
+    position: relative;
     background: rgba(0, 0, 0, 0.7);
     padding: 20px;
     border-radius: 5px;
-    width: 80%;
-    max-height: 80%;
+    width: 70%;
+    max-height: 80vh;
     overflow: auto;
-    position: relative;
 }
 
 .close {
@@ -36,13 +36,16 @@
 
 
 .modal--description {
-    display: flex;
     margin-right: 20px;
+    text-align: justify;
+    min-height: 440px;
 }
 
 .modal--description img {
     height: 40%;
     width: 40%;
+    float: left;
+    max-width: 280px;
     margin-right: 1rem;
 }
 
@@ -57,13 +60,57 @@
 }
 
 .info--movie p {
+    line-height: 1.6; 
+    text-align: justify;
+    margin-right: 2em; 
     
-    margin-right: 2em; /* Adiciona espaço à direita de cada <p> */
     
 }
 
-/* Opcionalmente, você pode adicionar margem ao último item se não precisar de espaço à direita */
 .info--movie p:last-child {
     overflow: auto;
     margin-right: 0;
+}
+
+.actors--modal {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+    
+}
+
+.plus--info {
+    padding: 10px 20px;
+    border-top: 1px solid #ddd;
+  }
+
+.actors--modal p{
+    padding-right:1rem;
+}
+
+@media (max-width: 855px) {
+    .actors--modal {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 390px) {
+    .actors--modal {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .modal--description {
+        min-height: 200px;
+    }
+}
+
+@media (max-width: 500px) {
+    .modal--description img {
+        float: none;
+        width: 200px;
+        margin-left: 0.7rem;
+    }
 }
